Update to java8 api